# spdlog

./: CMakeLists.txt  spdlogConfig.cmake.in
